Working on storing images

--- a/client/components/canvas-slate/canvas-slate.html
+++ b/client/components/canvas-slate/canvas-slate.html
@@ -7,7 +7,10 @@
            data-document="document"
            data-socket="socket"
            data-user-id="userId"
-           data-set-up-tool="setUpTool">
+           data-set-up-tool="setUpTool"
+           data-onmouseup="compressCanvas"
+           data-oncanvasready="onCanvasReady"
+        >
       </div>
     </div>
 </div>
